--- a/templates/admin/admin_show_structure.html.twig
+++ b/templates/admin/admin_show_structure.html.twig
@@ -7,6 +7,13 @@
 
 <div class="example-wrapper">
     <h1>Structure - {{ structure.address}} </h1>
+        <div>
+            {% if structure.user.isActive == true %}
+                <a href="{{ path('app_admin_enable_user', {id: structure.user.id }) }}" class="btn">Désactiver</a>
+            {% elseif structure.user.isActive == false %}
+                <a href="{{ path('app_admin_enable_user', {id: structure.user.id }) }}" class=btn">Activer</a>
+            {% endif %}
+        </div>
             <div>
                 <h3>{{ structure.address }}</h3>
                 <p>{{ structure.address }}</p>
