--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -5,20 +5,37 @@
   top: 8vh;
   left: 15vw;
   width: 85vw;
-  min-height: 92vh;
+  min-height: 92%;
 }
 
 @media screen and (max-width: 992px) {
-   .dashboard-card{
-     background-color: white;
-     width: 90vw;
-     height: 30vh;
-     border: solid 1px lightgray;
+
+   .dashboard-cards{
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+
+
+      .dashboard-card{
+       background-color: white;
+       width: 70vw;
+       height: 35vh;
+       border: solid 1px lightgray;
+       margin: 2rem 0;
+
+      }
+
    }
 
   .main-container{
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
     left: 0;
+    right: 0;
 
   }
 
