--- a/templates/admin/admin_show_partner.html.twig
+++ b/templates/admin/admin_show_partner.html.twig
@@ -2,8 +2,17 @@
 
 {% block title %}Partenaire{% endblock %}
 
-{% block body %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('build/adminNavBar.css') }}">
+{% endblock %}
 
+{% block javascripts %}
+    {{ encore_entry_script_tags('adminNavBar') }}
+{% endblock%}
+
+{% block body %}
+    {% include 'Partials/_admin_navBar.html.twig' %}
 
 <div class="example-wrapper">
     <h1>Partenaire - {{ partner.name}} </h1>
