--- a/assets/styles/adminNavBar.scss
+++ b/assets/styles/adminNavBar.scss
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   color: #EEEEEE;
-  border-bottom: solid 1px lightgray;
+  border-bottom: solid 1px #0a1e2a;
 
   .logo{
 
@@ -59,7 +59,7 @@
   height: 92vh;
   width: 25vw;
   padding-top: 3rem;
-  background-color: white;
+  background-color: #112B3C;
   border-right: solid 1px lightgray;
   display: flex;
   flex-direction: column;
@@ -76,8 +76,8 @@
   padding-left: 0;
 
   li {
-    padding-top: 0.7rem;
-    padding-bottom: 0.7rem;
+
+    line-height: 2.6rem;
     padding-left: 2rem;
     list-style: none;
     cursor: pointer;
@@ -97,6 +97,9 @@
       text-decoration: none;
       color:#4c99cd;
       font-weight: 600;
+      width: 100%;
+      height: 100%;
+      display: block;
     }
   }
 }
@@ -145,12 +148,13 @@
 
   .side-bar {
     position: absolute;
-    top: 0;
+    top: 8vh;
     width: 300px;
     height: 92vh;
     background-color: #112B3C;;
     transform: translateX(-300px);
     transition: transform 0.7s ;
+    z-index: 1;
 
     .link-list{
       width: inherit;
