--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -3,27 +3,108 @@
   background-color: #f3f9fc;
   position: absolute;
   top: 8vh;
-  left: 15vw;
-  width: 85vw;
+  left: 25vw;
+  width: 75vw;
   min-height: 92%;
+  padding: 3rem;
+
+  .hi-manager{
+
+     display: flex;
+    flex-direction: row;
+    align-items: end;
+    margin-bottom: 3rem;
+
+    .wave-icon{
+        background: url('../pictures/icons8-comme-ci-comme-ça-80.png') no-repeat;
+        background-size: cover;
+        height: 2rem;
+        width: 2rem;
+        margin-right: 1rem;
+    }
+
+    h2{
+      margin-bottom: 0;
+      font-size: 1.5rem;
+      color: gray;
+    }
+
+
+  }
+
+  h3{
+    font-size: 1.3rem;
+    color: #0a1e2a;
+  }
+
 }
+
+.dashboard-cards{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+
+  .dashboard-card{
+    margin-right: 1rem;
+    height: 25vh;
+    background-color: white;
+    border: solid 1px lightgray;
+    width: 20vw ;
+    padding: 1rem;
+    border-left: solid 5px #4c99cd ;
+
+    h4{
+      color: gray;
+      font-size: 1rem;
+    }
+
+
+  }
+}
+
+.card-content{
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content: center;
+  margin: 2rem;
+  height: 3rem;
+
+  div{
+    text-align: center;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    border: solid .5px #c4dfed;
+    background-color: #ebf4f9;
+    margin-right: 1rem;
+
+  }
+
+  p{
+    margin-bottom: 0;
+    color: gray;
+    font-size: 2rem;
+  }
+}
+
 
 @media screen and (max-width: 992px) {
 
    .dashboard-cards{
-
       display: flex;
       flex-direction: column;
       align-items: center;
-
-
+     justify-content: center;
+     width: inherit;
 
       .dashboard-card{
-       background-color: white;
        width: 70vw;
-       height: 35vh;
+       height: 30vh;
        border: solid 1px lightgray;
-       margin: 2rem 0;
+       border-bottom: solid 5px #4c99cd ;
+       margin: 1rem 0;
 
       }
 
