--- a/templates/Partials/_admin_navBar.html.twig
+++ b/templates/Partials/_admin_navBar.html.twig
@@ -19,7 +19,7 @@
 </nav>
 <nav class="side-bar">
     <ul class="link-list">
-        <li class="link-li accueil" id="accueil"><a href="{{ path('app_admin') }}">Accueil</a></li>
+        <li class="link-li "><a href="{{ path('app_admin') }}">Tableau de bord</a></li>
         <li class="link-li" id=""><a href="{{ path('app_admin_show_partners') }}">Partenaires</a></li>
         <li class="link-li" id=""><a href="{{ path('app_admin_create_partner') }}">Nouveau partenaire</a></li>
         <li class="link-li" id=""><a href="{{ path('app_admin_create_structure') }}">Nouvelle structure</a></li>
