--- a/templates/admin/admin_new_structure.html.twig
+++ b/templates/admin/admin_new_structure.html.twig
@@ -5,10 +5,12 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('build/adminNavBar.css') }}">
-{% endblock %}
+    <link rel="stylesheet" href="{{ asset('build/formAdd.css') }}">
+{% endblock%}
 
 {% block javascripts %}
     {{ encore_entry_script_tags('adminNavBar') }}
+    {{ encore_entry_script_tags('formAdd') }}
 {% endblock%}
 
 {% block body %}
@@ -16,22 +18,41 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     {% include 'Partials/_admin_navBar.html.twig' %}
-
+    <div class="main-container">
     <h1>Nouvelle structure</h1>
 
 
     {{ form_start(structureForm) }}
+    <div class="mb-3 row parent-div">
+
     {{ form_row(structureForm.structure.partner) }}
+    </div>
+    <div class="mb-3 row parent-div">
+
     {{ form_row(structureForm.user.email) }}
+    </div>
+    <div class="mb-3 row parent-div">
+
     {{ form_row(structureForm.user.plainPassword, {
-        label: 'Password'
+        label: 'Mot de passe'
     }) }}
+    </div>
+    <div class="mb-3 row parent-div">
+
     {{ form_row(structureForm.structure.address) }}
+    </div>
+    <div class="mb-3 row parent-div">
+
     {{ form_row(structureForm.structure.zipcode) }}
+    </div>
+    <div class="mb-3 row parent-div">
+
     {{ form_row(structureForm.structure.city) }}
-    <button type="submit" class="btn">Ajouter la structure</button>
+    </div>
+    <div class="text-center">
+    <button type="submit" class="btn submit-btn">Ajouter la structure</button>
     {{ form_end(structureForm) }}
 
-
+    </div>
 
 {% endblock %}
