--- a/templates/Partials/_content.html.twig
+++ b/templates/Partials/_content.html.twig
@@ -1,5 +1,33 @@
+<p class="number-structure">Nombre de résultat : {{ partners|length }}</p>
 {% for partner in partners %}
-    <h3>{{ partner.name }}</h3>
-    <p>{{ partner.user.email }}</p>
-    <a href="{{ path('app_admin_show_partner', {slug: partner.slug }) }}">Voir la fiche du partenaire</a>
+    <div class="partners-card">
+        <div class="person-svg">
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+            </div>
+        </div>
+        <div class="partner-card">
+            <div class="partner-titles">
+            <h3>{{ partner.name }}</h3>
+                <div>
+                    <p class="title"><span>Statut :</span>
+                    {% if partner.user.isActive == 1%}activé
+                    {% elseif partner.user.isActive == 0%}désactivé
+                    {% endif %}</p>
+                    <p class="title"><span>Nombre de structures :</span> {{ partner.structures|length }}</p>
+                    <p class="title"><span>Adresse email :</span> {{ partner.user.email }}</p>
+                </div>
+            </div>
+            <div class="page-link">
+            <a href="{{ path('app_admin_show_partner', {slug: partner.slug }) }}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#4c99cd" class="bi bi-eye-fill" viewBox="0 0 16 16">
+                    <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+                    <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+                </svg>
+            </a>
+            </div>
+        </div>
+    </div>
 {% endfor %}
