--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,11 @@
-body {
-    background-color: lightgray;
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
+
+
 
 @import "~bootstrap/scss/bootstrap";
 
