--- a/assets/styles/partners.scss
+++ b/assets/styles/partners.scss
@@ -3,11 +3,156 @@
   background-color: #f3f9fc;
   position: absolute;
   top: 8vh;
-  left: 25vw;
-  width: 75vw;
+  left: 20%;
+  width: 80%;
   min-height: 92%;
-  padding: 3rem;
+  padding: 3rem 6rem;
 
+}
+
+h2{
+  font-weight: 600;
+}
+
+#content{
+  .number-structure{
+    color: gray;
+  }
+}
+
+.filter-bar{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  border: solid 1px lightgray;
+  padding: 1rem 2rem;
+  margin-bottom: 1.5rem;
+
+
+
+  &:hover{
+    box-shadow: 0 0 10px 2px lightgray;
+  }
+
+  input{
+    height: 2.5rem;
+    width: 60%;
+  }
+
+  form{
+
+    label{
+      margin-right: 0.8rem;
+    }
+
+    select {
+      height: 2.5rem ;
+    }
+  }
+}
+
+.partners-card{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+  height: 190px;
+  margin-bottom: 1rem;
+
+
+  &:hover{
+    box-shadow: 0 0 10px 2px lightgray;
+  }
+
+  .person-svg{
+    height: 100%;
+    width: 190px;
+    border: solid 1px lightgray;
+    border-right: none;
+    border-collapse: collapse;
+    background-color: #e6e6e6;
+    position: relative;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+
+
+    div{
+
+      svg{
+      color: white;
+      vertical-align: bottom;
+      }
+    }
+  }
+}
+
+.partner-card{
+  border: solid 1px lightgray;
+  padding: 1rem 2rem;
+  background-color: white;
+  position: relative;
+  height: 100%;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  .partner-titles{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: inherit;
+
+    h3{
+      color: #2c70a0;
+      font-weight: 700;
+    }
+
+    div{
+      .title{
+        color: black;
+        margin-bottom: 0.5rem;
+
+        span{
+          color: #112B3C;
+          font-weight: 600;
+        }
+      }
+    }
+
+  }
+}
+
+.page-link{
+
+  a{
+    display: flex;
+    text-decoration: none;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: #ebf4f9;
+    border: solid .5px #c4dfed;
+
+    &:hover{
+      background-color: #112B3C;
+      border: solid .5px #112B3C;
+
+      svg{
+        fill: white;
+
+      }
+    }
+
+
+  }
 }
 
 
