--- a/assets/styles/formAdd.scss
+++ b/assets/styles/formAdd.scss
@@ -3,11 +3,45 @@
   background-color: #f3f9fc;
   position: absolute;
   top: 8vh;
-  left: 25vw;
-  width: 75vw;
+  left: 20%;
+  width: 80%;
   min-height: 92%;
-  padding: 3rem;
+  padding: 3rem 6rem;
 
+}
+
+h2{
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+}
+
+.form-add{
+  background-color: white;
+  border: solid 1px lightgray;
+  padding: 1rem 3rem;
+  margin-bottom: 1.5rem;
+
+
+  &:hover{
+    box-shadow: 0 0 10px 2px lightgray;
+  }
+
+  div{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1.5rem;
+
+    label{
+      width: 30%;
+    }
+  }
+
+  .form-btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 form{
