--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -3,10 +3,11 @@
   background-color: #f3f9fc;
   position: absolute;
   top: 8vh;
-  left: 25vw;
-  width: 75vw;
+  left: 20%;
+  width: 80%;
   min-height: 92%;
-  padding: 3rem;
+  padding: 3rem 6rem;
+
 
   .hi-manager{
 
@@ -33,8 +34,11 @@
   }
 
   h3{
-    font-size: 1.3rem;
-    color: #0a1e2a;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+
+    color: black;
   }
 
 }
@@ -43,10 +47,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
 
   .dashboard-card{
-    margin-right: 1rem;
+
     height: 25vh;
     background-color: white;
     border: solid 1px lightgray;
