--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -1,13 +1,136 @@
-
-.main-container{
+.main-container {
   background-color: #f3f9fc;
   position: absolute;
   top: 8vh;
-  left: 25vw;
-  width: 75vw;
+  left: 20%;
+  width: 80%;
   min-height: 92%;
-  padding: 3rem;
+  padding: 3rem 6rem;
+}
 
+h2{
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+}
+
+
+h3{
+  color: #2c70a0;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+
+.permissions-div{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+
+  .form-permissions{
+
+    form{
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+
+      .submit-form{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: 1.5rem 0;
+      }
+    }
+  }
+}
+
+.white-card{
+  background-color: white;
+  border: solid 1px lightgray;
+  padding: 1rem 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.infos-div{
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-between;
+  height: 30%;
+
+  .info-partner{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    div{
+
+      p{
+        margin-bottom: .5rem;
+      }
+    }
+
+  }
+
+  .partner-btns{
+     display: flex;
+    flex-direction: row;
+    align-items: start;
+
+    a{
+      margin-left: .5rem;
+    }
+  }
+}
+
+.structures-div{
+
+  h3{
+    margin-bottom: 0.5rem;
+  }
+}
+
+/* The Modal (background) */
+.confirm-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-buttons {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%; /* Could be more or less, depending on screen size */
+}
+
+#submit-form{
+  display: none;
+}
+
+
+/* The Close Button */
+.closing {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.closing:hover,
+.closing:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 992px) {
