--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -49,6 +49,7 @@
                         </label>
                     </div>
                 #}
+                <a href="{{ path('app_reset_pass') }}">Mot de passe oublié</a>
 
                 <button class="btn btn-lg btn-primary" type="submit">
                     Se connecter
